// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: AppHeader should handle missing info and show unknown if no data 1`] = `
<div
  class="chakra-stack css-184jys2"
>
  <h2
    class="chakra-heading css-0"
  >
    Connect
  </h2>
  <div
    class="chakra-stack css-84zodg"
  >
    <p
      class="chakra-text css-mwent8"
    >
      Unknown
    </p>
  </div>
</div>
`;

exports[`Component: AppHeader should render the the component with icon 1`] = `
<div
  class="chakra-stack css-184jys2"
>
  <h2
    class="chakra-heading css-0"
  >
    Connect to Test App
  </h2>
  <div
    class="chakra-stack css-84zodg"
  >
    <img
      alt="Logo"
      class="chakra-image css-dqjekp"
      src="test.png"
    />
    <p
      class="chakra-text css-mwent8"
    >
      www.onflow.org
    </p>
  </div>
</div>
`;
